--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.TOKEN_GITHUB }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/user \
-          -d '$(<bio)'
+          -d '{"bio": "$(<bio)}"'
