--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ jobs:
     steps:
       - name: bio
         run: |
+          ls -lah
           curl -L \
           -X PATCH \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN_GITHUB }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/user \
-          -d '{"bio": "$(<bio)}"'
+          -d '{"bio": "$(<bio)"}'
