--- a/.github/workflows/fields.yml
+++ b/.github/workflows/fields.yml
@@ -1,4 +1,4 @@
-name: sync-the-fields
+name: update public profiles fields everywhere
 
 on: 
   push:
@@ -20,7 +20,7 @@ jobs:
           curl -L \
           -X PATCH \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.TOKEN_GITHUB }}" \
+          -H "Authorization: Bearer ${{ secrets.profile_token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/user \
           -d "{\"bio\": \"$(<fields/bio)\"}"
