--- a/.github/workflows/fields.yml
+++ b/.github/workflows/fields.yml
@@ -3,7 +3,7 @@ name: update public profiles fields everywhere
 on: 
   push:
     paths:
-      - assets/fields/*
+      - assets/data/fields/*
 
 jobs:
   sync-the-fields:
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          sparse-checkout: 'assets/fields' 
+          sparse-checkout: 'assets/data/fields' 
           sparse-checkout-cone-mode: false
       - name: sync bio
         run: |
@@ -23,4 +23,4 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.profile_token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/user \
-          -d "{\"bio\": \"$(<assets/fields/bio)\"}"
+          -d "{\"bio\": \"$(<assets/data/fields/bio)\"}"
